fix all findbugs errors